<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <!-- This POM is used as base for any child project in a way that it is
        not necessary manage details of each child individually. However, every child
        must be considered as an independent project, and thus, their coordinates
        have not to be align with the defined here. The version number will be always
        RELEASE regardless the versions of the children. -->

    <groupId>es.iti.kukumo</groupId>
    <artifactId>kukumo-project</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <name>Kukumo</name>
    <description>Project containing Kukumo as well as other useful tools</description>

    <modules>
        <module>kukumo-bom</module>
        <!-- tools -->
        <module>kukumo-tools/jext</module>
        <module>kukumo-tools/jext-spring</module>
        <module>kukumo-tools/gherkin-parser</module>
        <module>kukumo-tools/distribution-maven-plugin</module>
        <!-- kukumo -->
        <module>kukumo</module>
        <!-- plugins -->
        <module>kukumo-plugins/kukumo-rest</module>
        <module>kukumo-plugins/kukumo-html-report</module>
        <module>kukumo-plugins/kukumo-rest-l10n</module>
        <module>kukumo-plugins/kukumo-db</module>
        <module>kukumo-plugins/kukumo-db-l10n</module>
        <module>kukumo-plugins/kukumo-spring</module>
        <module>kukumo-plugins/kukumo-io</module>
        <module>kukumo-plugins/kukumo-io-l10n</module>
        <module>kukumo-plugins/kukumo-amqp</module>
        <module>kukumo-plugins/kukumo-amqp-l10n</module>
        <!-- examples -->
        <module>kukumo-examples/spring-junit-example</module>
        <module>kukumo-examples/spring-verify-example</module>
        <module>kukumo-examples/spring-launcher-example</module>
        <!-- other -->
        <module>kukumo-server-quarkus</module>
        <module>kukumo-docker</module>
    </modules>


    <!-- ============================================================= The following
        configuration will be inherited by every module ============================================================= -->

    <organization>
        <name>ITI - Instituto Tecnológico de Informática</name>
        <url>https://www.iti.es</url>
    </organization>
    <licenses>
        <license>
            <name>MPL-2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>


    <properties>
        <!-- kukumo version -->
        <revision>1.3.1</revision>

        <!-- encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- build versions -->
        <java.version>11</java.version>
        <maven.compiler.version>3.8.0</maven.compiler.version>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <!-- paths -->
        <maven.repo.local>${user.home}/.m2/repository</maven.repo.local>

        <!-- plugin versions -->
        <jacoco.version>0.8.2</jacoco.version>
        <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
        <surefire.report.version>2.6</surefire.report.version>
        <maven.site.version>3.7.1</maven.site.version>
        <maven.ant.version>1.8</maven.ant.version>
        <maven.info.reports.version>3.0.0</maven.info.reports.version>
        <maven.javadoc.version>2.8</maven.javadoc.version>
        <maven.jar.plugin.version>3.0.0</maven.jar.plugin.version>
        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>

        <!-- annotation processor versions -->
        <jext.version>1.0.0</jext.version>

    </properties>





    <!-- basic build features -->
    <build>
        <plugins>
            <!-- specific version of maven compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <verbose>${verbose}</verbose>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- Surefire with JaCoCo agent -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>${surefireJacocoAgent}
                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
                        --illegal-access=permit</argLine>
                </configuration>
            </plugin>
            <!-- Failsafe with JaCoCo agent -->
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.18.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <argLine>${failsafeJacocoAgent}
                                -Djdk.net.URLClassPath.disableClassPathURLCheck=true
                                --illegal-access=permit</argLine>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- JaCoCo coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                            <propertyName>surefireJacocoAgent</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>pre-integration-test</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                            <destFile>${project.build.directory}/jacoco-it.exec</destFile>
                            <propertyName>failsafeJacocoAgent</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- generate additional jar with sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- copy dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <phase>prepare-package</phase>
                        <configuration>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- flatten prior install, required since ${revision} is used -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <flattenedPomFilename>.flattened-pom.xml</flattenedPomFilename>
                            <updatePomFile>false</updatePomFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- install using flattened pom, ,required since ${revision} is used -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <configuration>
                    <pomFile>.flattened-pom.xml</pomFile>
                </configuration>
            </plugin>

        </plugins>
    </build>



</project>